package org.ting.pattern.bridge.inter;

/**
 * 桥妆实现接口
 *
 * @author 张韧炼
 * @create 2019-07-04 下午3:28
 **/
public interface DrawAPI {
    void drawCircle(int radius, int x, int y);
}
